[package]
name = "libs-core-bindings"
version = "0.1.0"
authors = ["gary@kzencorp.com <gary@kzencorp.com>"]
license = "MIT"
exclude = ["artifacts.json", "index.node"]

[dependencies]
serde = "1.0.75"
serde_json = "1.0.26"
serde_derive = "1.0.75"

[dependencies.paillier]
git = "https://github.com/mortendahl/rust-paillier"
branch = "new_correct_key"

[dependencies.multi-party-ecdsa]
git = "https://github.com/KZen-networks/multi-party-ecdsa"
branch = "pdl-sub-protocol"

[dependencies.kms]
git = "https://github.com/KZen-networks/kms-secp256k1"
branch = "schnorr_support"

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }