[package]
name = "libs-core-bindings"
version = "0.1.0"
authors = ["gary@kzencorp.com <gary@kzencorp.com>"]
license = "MIT"
exclude = ["artifacts.json", "index.node"]

[dependencies]
serde = "1.0.75"
serde_json = "1.0.26"
serde_derive = "1.0.75"
paillier = { git = "https://github.com/mortendahl/rust-paillier" }

[dependencies.cryptography-utils]
git = "https://github.com/KZen-networks/cryptography-utils"
features =  ["curvesecp256k1"]
branch = "v0.0.1-no-pdl"

[dependencies.multi-party-ecdsa]
git = "https://github.com/KZen-networks/multi-party-ecdsa"
branch = "support-v"

[dependencies.kms]
git = "https://github.com/KZen-networks/kms"
branch = "support-v"

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }
